--- a/first_model NLP/first_model copy.ipynb
+++ b/first_model NLP/first_model copy.ipynb
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,13 +1134,13 @@
     "\n",
     "# # Connexion à Hugging Face (nécessaire une seule fois)\n",
     "# # notebook_login()\n",
-    "# login(token=\"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\")\n",
+    "# login(token=\"\")\n",
     "\n",
     "# # Chemin de ton modèle local\n",
     "# model_path = \"./saved_model\"\n",
     "\n",
     "# # Nom du repo Hugging Face (choisis un nom unique)\n",
-    "# repo_name = \"queenVdu13/NLPF\"\n",
+    "# repo_name = \"\"\n",
     "\n",
     "# # Charger le modèle et le tokenizer\n",
     "# model = AutoModelForSequenceClassification.from_pretrained(model_path)\n",
